[package]
name = "epm-server"
version = "0.1.0"
authors = ["Oxygen <3038094028@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "epm-server"
path = "src/server.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
chrono = "0.4.13"
console = "0.11.3"
proctitle = "0.1.1"
redis = "0.17.0"
json = "0.12.4"
lazy_static = "1.4.0"
base64 = "0.12.3"
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
tonic-build = "0.3"